# rag_project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: Alianzas_estrategicas_innovacion.txt  Experiencias_personalizadas.txt  app_historia_card_Educacion_financiera.txt  app_historia_card_Recompensas.txt  app_historia_card_pagos.txt  app_historia_card_panel_control.txt  app_historia_card_seguridad_y_tecnologia.txt  innovación_continua.txt  productos_ofrecidos.txt  tarjeta_debito.txt  testimonios_clientes.txt
data/Cluster_kmeans_separator/: Cluster_0.txt  Cluster_1.txt  Cluster_2.txt  Cluster_3.txt
data/Handler_separator/: Introduccion.txt  app_historia_card_Configuración.txt  app_historia_card_Soporte.txt  app_historia_card_mi_perfill.txt  app_historia_card_tarjetas.txt  cumplimiento_normativo.txt  etica_empresarial.txt  inclusión_financiera.txt  innovación_y_tecnologia.txt  mision.txt  producto_futuro.txt  proyecciones_futuras_expansión.txt  sostenibilidad.txt  tarjeta_credito.txt  vision.txt
data/LDA_separator/: Tema_0.txt  Tema_2.txt  Tema_3.txt
data/docs/: Impacto en la Sociedad y Responsabilidad Social.txt  app_historia_card.txt  documents.txt
src/: config.py  containers.py
src/api/: ask_dense_endpoint.py  ask_endpoint.py  ask_llama_endpoint.py
src/application/: ask_question_dense_use_case.py  ask_question_llama_use_case.py  ask_question_use_case.py
src/commons/: load_documents.py  still_not_in_use_decorator.py
test/: test_ask_endpoint.py  test_dense_endpoint.py
(+16 files in other folders)
