[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["Betoso <lachavezca@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.6.2.post1"
pytest-asyncio = "^0.24.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
dependency-injector = "^4.43.0"
faiss-cpu = "^1.9.0"
fastapi = "^0.115.5"
httpx = "^0.27.2"
openai = "0.28"
pydantic = "^2.9.2"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
numpy = "2.1.3"
scikit-learn = "1.5.2"
sentence-transformers = "3.3.0"
uvicorn = "0.32.0"
pydantic-settings = "^2.6.1"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
